--- a/style/style.css
+++ b/style/style.css
@@ -65,7 +65,7 @@ ul {
     z-index: 1;
 }
 
-li {
+.nav__item {
     padding: 58px 0;
 }
 
@@ -213,8 +213,6 @@ li {
 }
 
 .btn {
-    display: flex;
-    align-items: center;
     border-radius: 4px;
     padding: 18px 0 18px 22px;
     background: var(--secondarycolor);
@@ -253,7 +251,7 @@ li {
     background: rgba(255, 193, 218, 0.28);
     width: 32px;
     height: 32px;
-    top: 26%;
+    top: 24%;
     left: 76%;
 }
 
@@ -358,7 +356,7 @@ li {
 }
 
 
-.services__items-card-title {
+.services__items-card_title {
     color: var(--pirimarycolor);
     font-size: 34px;
     font-weight: 500;
@@ -366,7 +364,7 @@ li {
     transition: 0.5s;
 }
 
-.services__items-card-text {
+.services__items-card_text {
     color: #919299;
     text-align: center;
     font-size: 16px;
@@ -376,7 +374,7 @@ li {
     transition: 0.5s;
 }
 
-.services__items-card-btn {
+.services__items-card_btn {
     display: flex;
     align-items: center;
     background: transparent;
@@ -387,6 +385,7 @@ li {
     font-weight: 500;
     line-height: 30px;
     margin-bottom: 20px;
+    cursor: pointer;
     transition: 0.5s;
 }
 
@@ -452,6 +451,8 @@ li {
 }
 
 .things__info-button {
+    display: flex;
+    align-items: center;
     color: #FFF;
     font-size: 20px;
     font-weight: 500;
@@ -461,14 +462,16 @@ li {
 
 
 .arrow2,
-.arrow3 {
+.arrow3,
+.arrow4 {
     background: none;
     padding-left: 19px;
     padding-right: 37px;
 }
 
 .arrow-span2,
-.arrow-span3 {
+.arrow-span3,
+.arrow-span4 {
     position: absolute;
     border-radius: 2px;
     border: 2.5px solid #FFF;
@@ -513,6 +516,8 @@ li {
 
 .teamwork__info-button {
     font-size: 20px;
+    display: flex;
+    align-items: center;
 }
 
 .teamwork__content {
@@ -591,15 +596,18 @@ li {
     opacity: 0;
     transition: 1.5s;
 }
+
 .about__img {
     transform: translateY(-50%);
     opacity: 0;
     transition: 1.5s;
 }
+
 .about__info.active {
     transform: translateY(0);
     opacity: 1;
 }
+
 .about__img.active {
     transform: translateY(0);
     opacity: 1;
@@ -658,17 +666,18 @@ li {
     height: 18px;
     cursor: pointer;
 }
+
 .arrow-btn:hover {
     transform: scale(1.2);
 }
 
 .arrow-btn:hover path {
-   fill: var(--secondarycolor);  
+    fill: var(--secondarycolor);
 }
 
 
 .arrow-btn path {
-    fill: var(--pirimarycolor) ;
+    fill: var(--pirimarycolor);
 }
 
 .info-slider_text {
@@ -682,4 +691,271 @@ li {
     top: -50%;
     left: 0;
     z-index: -1;
+}
+
+
+.brands__content {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 156px;
+}
+
+.brand {
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.brand:hover {
+    transform: scale(1.3);
+}
+
+.subscribe {
+    position: relative;
+    margin-bottom: 230px;
+}
+
+.subscribe__content {
+    max-width: 1040px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 33px;
+}
+
+.subscribe__img {
+    z-index: -1;
+    top: 0;
+    left: 0;
+}
+
+.subscribe__blog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.subscribe__blog-title {
+    color: var(--pirimarycolor);
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 72px;
+    margin-bottom: 18px;
+}
+
+
+.subscribe__blog-text {
+    width: 635px;
+    height: 87px;
+    text-align: center;
+    color: #919299;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    margin-bottom: 15px;
+
+}
+
+.subscribe__blog-form {
+    max-width: 706px;
+    width: 100%;
+    height: 82px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 4px;
+    background: #FFF;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.input {
+    padding: 28px 0 22px 60px;
+    display: flex;
+    align-items: center;
+    gap: 14px;
+
+}
+
+::placeholder {
+    color: #D2D2D2;
+    text-align: center;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.subscribe__blog-input {
+    font-size: 20px;
+
+    border: none;
+}
+
+.subscribe__blog-icon path {
+    fill: #D2D2D2;
+}
+
+.subscribe__blog-btn {
+    display: flex;
+    align-items: center;
+    margin-right: 13px;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 450;
+}
+
+.arrow-span4 {
+    top: 23%;
+    left: 71%;
+}
+
+.subscribe__bg {
+    position: absolute;
+    right: 0;
+    bottom: -25%;
+}
+
+.footer {
+    position: relative;
+    overflow: hidden;
+}
+
+.footer__img {
+    position: absolute;
+    z-index: -2;
+    width: 100%;
+    bottom: -30px;
+}
+
+.footer__img-outline {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+}
+
+
+.footer__content-items {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 64px;
+}
+
+.footer__content-img {
+    margin-bottom: 30px;
+}
+
+
+
+.footer__items-text {
+    color: #919299;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    margin-bottom: 38px;
+
+}
+
+.footer__items-text:nth-of-type(1) {
+    margin: 0;
+}
+
+
+.footer__items-info_title {
+    color: #919299;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 32px;
+    margin-bottom: 16px;
+}
+
+.footer__items-info_icons {
+    display: flex;
+    gap: 11px;
+}
+
+.footer__items-info_icon {
+    border-radius: 50%;
+    padding: 13px 13px 4px 13px;
+    background: #fff;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    transition: 0.3s;
+}
+
+.footer__items-info_icon:hover {
+    transform: scale(1.2);
+}
+
+.icons path {
+    transition: 0.3s;
+}
+
+.footer__items-info_icon:hover .icons path {
+    fill: #F78CB6;
+}
+
+
+.icons path {
+    fill: #A7A7A7;
+}
+
+.footer__content-list-title {
+    color: #56597A;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 32px;
+    margin-bottom: 37px;
+}
+
+.footer__content-link {
+    color: #919299;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    transition: 0.3s;
+}
+
+.footer__content-link:hover {
+    color: var(--pirimarycolor);
+}
+
+.footer__content-list {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.footer__bottom {
+    
+    background: #F78CB6;
+   width: 100%;
+}
+
+.footer__bottom-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__bottom-info {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.footer__bottom-info_text {
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 450;
+    line-height: 30px;
+    padding: 12px 0;
+}
+
+.footer__bottom-icons {
+    display: flex;
+    align-items: center;
+    gap: 13px;
+    cursor: pointer;
+}
+
+.footer__bottom-lang {
+    color: #fff;
 }
