--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@
 
 
 
+
 :root {
     --pirimarycolor: #56597A;
     --secondarycolor: #F78CB6;
@@ -699,12 +700,28 @@ ul {
     align-items: center;
     justify-content: space-around;
     margin-bottom: 156px;
+    transition: 1s;
+
 }
 
+.brands__card {
+    cursor: pointer;
+    transition: 2s;
+    transform: translate3d(-200px, 0, 0);
+    opacity: 0;
+}
+
+.brands__card.active {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+    transition: 2s;
+
+}
+/* 
 .brand {
     cursor: pointer;
     transition: 0.3s;
-}
+} */
 
 .brand:hover {
     transform: scale(1.3);
@@ -924,9 +941,9 @@ ul {
 }
 
 .footer__bottom {
-    
+
     background: #F78CB6;
-   width: 100%;
+    width: 100%;
 }
 
 .footer__bottom-content {
